使用ライブラリを追記

--- a/README
+++ b/README
@@ -1,2 +1,6 @@
-#PortAudioCsharp
+# PortAudioCsharp
 csbindgenを用いてPortAudioのFFIコードを自動生成
+
+# ライブラリ
+- [PortAudio](https://github.com/PortAudio/portaudio)
+- [csbindgen](https://github.com/Cysharp/csbindgen)
